# quantum-logical-framework

./: .gitignore  AI.md  Active_Inference_Mathematics.md  AgeOfUniverse.md  Alpha.md  Alpha_Residual.md  Alpha_Rigidity.md  Annihilation.md  Atom.md  Atomic_Structure_QLF.md  Atomic_System_QLF_Closures.md  BLACK-HOLES.md  BOSE-EINSTEIN-CONDENSATE.md  BSD_QLF.md  Banach_Tarski_QLF.md  BayesianMechanics.md  Beta_Decay_Neutrino_Nature.md  Beyond_Standard_Model.md  Born_Rule.md  Bound_States_QLF.md  BraKetRhoQuCalc.md  CLAUDE.md  CP-Violation-and-Chirality.md  ClaudesStory.md  Closure_Token_Basis.md  Collective_Electrodynamics.md  Completeness_Evidence.md  Consciousness.md  Conservation.md  Continuum_Choice_Fallacy.md  Continuum_Gets_Wrong_Answers.md  Cosmological_Constant.md  Creation.md  Cross_Frequency_Lorentz.md  Crystal_QuantumOS.md  Curvature.md  DAICE_QLF_Framing.md  DarkMatter.md  Decoherence.md  Delayed_Choice_Eraser.md  (+215 more)
docs/: migration-map.md  navigation.md  repository-layout.md
experiments/: QuCalc.py  SpaceTime.py  __init__.py  active_inference.py  ai_demonstration.py  atomic_routing.py  derive_emc2.py  fermi_accelerator.py  fusion_sim.py  hermitian.py  maxwell_qlf.py  muon_lifetime_demo.py  primordial_split.py  qlf_dirichlet_search.py  qlf_zfa_frequency.py  quantum_simulator.py
lean/: AgeOfUniverse.lean  BraKetRhoQuCalc.lean  ER_EPR_QLF.lean  MTheoryQLF.lean  PauliExclusion.lean  QLF_AlgebraEmergence.lean  QLF_AlphaBound.lean  QLF_AlphaRigidity.lean  QLF_AlphaS.lean  QLF_Anabelian.lean  QLF_AnabelianGalois.lean  QLF_AngularMomentum.lean  QLF_Anyons.lean  (+147 more)
(+89 files in other folders)
