[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "quantum-logical-framework"
version = "0.1.0"
description = "Python utilities and demonstrations for the Quantum Logical Framework."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "matplotlib",
  "numpy",
]

[project.optional-dependencies]
test = [
  "pytest",
]

[project.scripts]
qlf = "qlf.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]
